# neotest

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile.in  LICENSE  README.md
cmake/: NeoBuildType.cmake  NeoClangFormat.cmake  NeoClangTidy.cmake  NeoCodeCoverage.cmake  NeoCompilerOptions.cmake  NeoDocumentation.cmake  NeoTest.cmake  NeoTestClangFormat.cmake  NeoTestClangTidy.cmake  NeoTestCodeCoverage.cmake  NeoTestCompilerOptions.cmake  NeoTestDocumentation.cmake  NeoTestLinkTimeOptimization.cmake  NeoTestSanitizers.cmake
include/neotest/: neotest.h
src/: CMakeLists.txt  neotest.c
tests/: CMakeLists.txt  test_neotest_ko.c  test_neotest_ok.c
